--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Hello, I'm [Your Name] 👋</h1>
+        <h1>Hello, I'm Anoop U K 👋</h1>
         <p>I am passionate about technology and problem-solving. Here's a glimpse of my work:</p>
     </header>
 
@@ -22,15 +22,15 @@
 
         <h2>🚀 Skills</h2>
         <ul>
-            <li>C++, Python, JavaScript</li>
+            <li>C, C++, Python(Basic), JavaScript</li>
             <li>Data Structures and Algorithms</li>
             <li>Web Development (React.js, Node.js)</li>
         </ul>
 
         <h2>🌐 Find Me Online</h2>
         <ul>
-            <li><a href="https://github.com/your-github-username" target="_blank">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
+            <li><a href="https://https://github.com/Anoop042004" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/anoop-uk-kadakol-83359726a/" target="_blank">LinkedIn</a></li>
         </ul>
 
         <h2>Portfolio Topic</h2>
@@ -42,16 +42,16 @@
             <dd>Course Code Placeholder</dd>
 
             <dt>Name</dt>
-            <dd>Your Name</dd>
+            <dd>Anoop U Kadakol</dd>
 
             <dt>SRN</dt>
-            <dd>Your SRN</dd>
+            <dd>01FE22BCS285</dd>
 
             <dt>Course Instructor</dt>
             <dd>Instructor Name Placeholder</dd>
 
             <dt>University</dt>
-            <dd>Your University Name</dd>
+            <dd>KLE Technological University</dd>
 
             <dt>Portfolio Topic/Domain</dt>
             <dd>Google</dd>
