--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <h2>🌐 Find Me Online</h2>
         <ul>
-            <li><a href="https://https://github.com/Anoop042004" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/Anoop042004" target="_blank">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/anoop-uk-kadakol-83359726a/" target="_blank">LinkedIn</a></li>
         </ul>
 
